--- a/requirements.yml
+++ b/requirements.yml
@@ -1,12 +1,31 @@
 name: venv_iie
 channels:
+  - plotly
   - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
+  - asttokens=2.4.1=pyhd8ed1ab_0
+  - attrs=23.1.0=pyh71513ae_1
   - bzip2=1.0.8=hd590300_5
   - ca-certificates=2023.11.17=hbcca054_0
+  - comm=0.1.4=pyhd8ed1ab_0
+  - debugpy=1.8.0=py310hc6cd4ac_1
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - exceptiongroup=1.2.0=pyhd8ed1ab_0
+  - executing=2.0.1=pyhd8ed1ab_0
+  - importlib-metadata=6.8.0=pyha770c72_0
+  - importlib_metadata=6.8.0=hd8ed1ab_0
+  - importlib_resources=6.1.1=pyhd8ed1ab_0
+  - ipykernel=6.26.0=pyhf8b6a83_0
+  - ipython=8.18.1=pyh31011fe_1
+  - jedi=0.19.1=pyhd8ed1ab_0
+  - jsonschema=4.20.0=pyhd8ed1ab_0
+  - jsonschema-specifications=2023.11.1=pyhd8ed1ab_0
+  - jupyter_client=8.6.0=pyhd8ed1ab_0
+  - jupyter_core=5.5.0=py310hff52083_0
   - ld_impl_linux-64=2.40=h41732ed_0
   - libblas=3.9.0=20_linux64_openblas
   - libcblas=3.9.0=20_linux64_openblas
@@ -18,26 +37,63 @@ dependencies:
   - liblapack=3.9.0=20_linux64_openblas
   - libnsl=2.0.1=hd590300_0
   - libopenblas=0.3.25=pthreads_h413a1c8_0
+  - libsodium=1.0.18=h36c2ea0_1
   - libsqlite=3.44.2=h2797004_0
   - libstdcxx-ng=13.2.0=h7e041cc_3
   - libuuid=2.38.1=h0b41bf4_0
   - libzlib=1.2.13=hd590300_5
+  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
+  - nbformat=5.9.2=pyhd8ed1ab_0
   - ncurses=6.4=h59595ed_2
+  - nest-asyncio=1.5.8=pyhd8ed1ab_0
   - numpy=1.26.2=py310hb13e2d6_0
+  - odfpy=1.4.1=py_0
   - openssl=3.2.0=hd590300_1
+  - packaging=23.2=pyhd8ed1ab_0
   - pandas=2.1.3=py310hcc13569_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - pexpect=4.8.0=pyh1a96a4e_2
+  - pickleshare=0.7.5=py_1003
   - pip=23.3.1=pyhd8ed1ab_0
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
+  - platformdirs=4.0.0=pyhd8ed1ab_0
+  - plotly=5.18.0=pyhd8ed1ab_0
+  - plotly-orca=1.3.1=1
+  - prompt-toolkit=3.0.41=pyha770c72_0
+  - psutil=5.9.5=py310h2372a71_1
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - pygments=2.17.2=pyhd8ed1ab_0
   - python=3.10.13=hd12c33a_0_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-fastjsonschema=2.19.0=pyhd8ed1ab_0
   - python-tzdata=2023.3=pyhd8ed1ab_0
   - python_abi=3.10=4_cp310
   - pytz=2023.3.post1=pyhd8ed1ab_0
+  - pyzmq=25.1.1=py310h795f18f_2
   - readline=8.2=h8228510_1
+  - referencing=0.31.0=pyhd8ed1ab_0
+  - rpds-py=0.13.1=py310hcb5633a_0
   - scipy=1.11.4=py310hb13e2d6_0
   - setuptools=68.2.2=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
+  - stack_data=0.6.2=pyhd8ed1ab_0
+  - tenacity=8.2.3=pyhd8ed1ab_0
   - tk=8.6.13=noxft_h4845f30_101
+  - tornado=6.3.3=py310h2372a71_1
+  - traitlets=5.14.0=pyhd8ed1ab_0
+  - typing_extensions=4.8.0=pyha770c72_0
   - tzdata=2023c=h71feb2d_0
+  - wcwidth=0.2.12=pyhd8ed1ab_0
   - wheel=0.42.0=pyhd8ed1ab_0
   - xz=5.2.6=h166bdaf_0
+  - zeromq=4.3.5=h59595ed_0
+  - zipp=3.17.0=pyhd8ed1ab_0
+  - pip:
+      - certifi==2023.11.17
+      - charset-normalizer==3.3.2
+      - idna==3.6
+      - kaleido==0.2.1
+      - requests==2.31.0
+      - urllib3==2.1.0
 prefix: /home/dimitri/miniconda3/envs/venv_iie
